fix: resolve contrast issue with header bar (fixes #1739) (#1741)
* fix: resolve contrast issue with header bar (fixes #1739)

* ci: add commitlint check

--- a/src/assets/styles/components/_idrc-indicator.scss
+++ b/src/assets/styles/components/_idrc-indicator.scss
@@ -17,3 +17,9 @@
 		}
 	}
 }
+
+.idrc-indicator-element a {
+	color: $black;
+	text-decoration: underline;
+	text-underline-offset: calc(2 / 16 * 1rem);
+}
